--- a/three_days_of_the_condor.html
+++ b/three_days_of_the_condor.html
@@ -26,7 +26,7 @@
     &emsp;During a year dominated by the likes of <i>The Godfather Part II</i>, <i>The Towering Inferno</i> (also starring
     Faye Dunaway), and<i> Jaws</i>, 
     one might forget about <i>Three Days of the Condor</i>, Sydney Pollack’s political thriller with Robert Redford. 
-    Nearly fifty years later, though, the film still manages to stand out. 
+    Nearly fifty years later though, the film still manages to stand out. 
      Adapted from James Grady’s novel (and shortened by three days!), the book follows Joe Turner, code name “Condor,” 
      who works for the CIA. Despite his flashy employer, Turner is described as a “bookworm,” and works as a literary 
      analyst. Though it is difficult for Robert Redford to sell himself as a nerdy agent to the audience, his initial 
