--- a/pictures.html
+++ b/pictures.html
@@ -56,4 +56,12 @@
     <div id="all-pictures" class="all-pictures">
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiuI5zKTIS_VYdJMl0Gv9Klct8jt1gpcaalRU8q42e3ije-RHQmKRREcmg6ie4L-1-rrKI-RLb8qclQxL3fP1TllXhEsGkTGw5aTgtPzT15cC3QLGqNre10HNH81MNnBFaAtUMfwudxGEZc/w400-h225/After+Hours_Paul+Hackett+makes+it+back+to+work_He+gets+off+the+elevator+to+his+office+still+covered+in+the+dust+of+the+papier+mache.png" width="40%" height="40%">
         <img src="https://images.mubicdn.net/images/film/192420/cache-295962-1514925092/image-w1280.jpg?size=400x">
-    </div>
+        <img src="./pictures/nwbd.jpg">
+        <img src="./pictures/metropolis.jpg">
+        <img src="./pictures/berlin museum tv.jpg">
+        <img src="./pictures/louie.jpg">
+        <img src="./pictures/the trap miro.jpg">
+        <img src="./pictures/italy pizzeria.jpg">
+        <img src="./pictures/stellaaa.jpg">
+        <img src="./pictures/moulin rouge spy.jpg">
+   </div>
