rm resume, edit index file

--- a/aboutme.html
+++ b/aboutme.html
@@ -31,12 +31,6 @@
             <li id="pictures">
                 <a href="pictures.html"> pictures i like</a>
             </li>
-            <li id="resume">
-                <a href="Ryan Shanz - Resume.pdf" target="_blank">my resume</a>
-            </li>
-            <li id="github" > 
-                <a href="https://github.com/ryanshanz" target="_blank"> my github</a>
-            </li>
         </ul>
     </div>
     
@@ -48,7 +42,7 @@
     <br>
     <div id="about-me" class="about-me">
         <p>
-            Hey there! My name is Ryan Shanz, and I am a third year computer science student from Virginia attending the 
+            Hey there! My name is Ryan Shanz, and I am a fourth year computer science student from Virginia attending the 
             University of Maine. This site is a way for me to share cool stuff I like. Nice to meet you!
         </p>
     </div>
