--- a/index.html
+++ b/index.html
@@ -35,21 +35,16 @@
             <li id="pictures">
                 <a href="pictures.html"> pictures i like</a>
             </li>
-            <li id="resume">
-                <a href="Ryan Shanz - Resume.pdf" target="_blank">my resume</a>
-            </li>
-            <li id="github" > 
-                <a href="https://github.com/ryanshanz" target="_blank"> my github</a>
-            </li>
         </ul>
     </div>
     
     
     <div id="about-me" class="about-me">
-        <p>
-            'I’m just a guy.' - mac
-        </p>
-        <img src="https://images-prod.dazeddigital.com/1890/azure/dazed-prod/1330/7/1337869.jpg" width="20%" height="20%">
+        <div>
+            <br>
+            <img src="https://64.media.tumblr.com/ce25dafd2425e8477e88bc8195e74e41/tumblr_mmceftInLC1ronhn5o1_400.gifv"  class="center" allowFullScreen>
+            <p>hello</p>
+        </div>
     </div>
 </div>
 <br>
