--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div id="navbar" class="navbar">
         <ul id="menu" class="menu">
             <li id="home">
-                <a href="index.html">home</a>
+                <a href="ryanshanz.github.io/me/">home</a>
             </li>
             <li id="home">
                 <a href="aboutme.html">about me</a>
